Update the scraper to check if title is suitable for fake news instead of user intput. Add gitkeep files to retain directories.

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,9 @@
 __pycache__/
 .env
 
-# Prompts and instructions
-prompts
+# Prompts, instructions, and database
+prompts/*
+database/*
+
+# Keep the directories
+!.gitkeep
