--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.9"
 dependencies = [
     "dotenv (>=0.9.9,<0.10.0)",
     "openai (>=1.97.1,<2.0.0)",
-    "feedparser (>=6.0.11,<7.0.0)"
+    "feedparser (>=6.0.11,<7.0.0)",
+    "requests (>=2.32.4,<3.0.0)"
 ]
 
 [build-system]
